# rust-registry-tool

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
src/api/: schema.rs
