[package]
name = "registry-tool"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.1.4" }
mirror-error = { git = "https://github.com/lmzuccarelli/rust-mirror-error", branch = "main", version = "0.1.0" }
mirror-query = { git = "https://github.com/lmzuccarelli/rust-mirror-query", branch = "main", version = "0.6.0" }
mirror-auth = { git = "https://github.com/lmzuccarelli/rust-mirror-auth", branch = "main", version = "0.7.0" }
tokio = { version = "1.40.0", features = ["full"] }
regex = "1.11.1"

[profile.release]
strip = true # Strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Mazimize size reduction optimization

